Update manpage to new error codes

--- a/doc/manpage/srcml.cfg
+++ b/doc/manpage/srcml.cfg
@@ -365,10 +365,7 @@ of each unit in the archive to standard out.
 
 * ${STATUS_SUCCESS}: Normal
 * ${STATUS_ERROR}: General error
-* ${STATUS_INVALID_ARGUMENT}: Invalid option argument
-* ${STATUS_INVALID_OPTION}: Invalid option
-* ${SRCML_STATUS_UNKNOWN_ENCODING}: Unknown encoding
-* ${SRCML_STATUS_INVALID_LANGUAGE}: Invalid language
+* ${STATUS_INTERNAL_ERROR}: Internal error
 
 ## CAVEATS
 
@@ -395,7 +392,7 @@ and Heather Michaud.
 
 ## COPYRIGHT
 
-Copyright (C) 2013-2018 srcML, LLC. (www.srcML.org)
+Copyright (C) 2013-2019 srcML, LLC. (www.srcML.org)
 
 The srcML Toolkit is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
