Change behavior of --language on a directory or source-code archive to only apply to files with source-code extensions

--- a/doc/manpage/srcml.cfg
+++ b/doc/manpage/srcml.cfg
@@ -78,7 +78,9 @@ list from standard input.
 : The programming language of the source-code file. Allowable values are
 C, C++, C\#, or Java. The language affects parsing, the allowed
 markup, and what is considered a keyword. The value is also stored
-individually as an attribute in each unit element.
+individually as an attribute in each unit. If the input is a directory 
+or source-code archive (e.g., .tar.gz, .zip), the language only applies to files with source-code extensions.
+For non-standard source-code extensions, use --${REGISTER_EXTENSION_FLAG_LONG} to register the extension.
 
 If not specified, the programming language is based on the file
 extension. Language must be specified if using standard input. If the
