Remove default client test timeout as it cannot be overridden on the command line

--- a/test/client/testsuite/CMakeLists.txt
+++ b/test/client/testsuite/CMakeLists.txt
@@ -24,6 +24,7 @@ foreach(CLIENT_TEST ${CLIENT_TESTS})
 
     if(NOT TEST_NAME STREQUAL "framework_test.sh")
         add_test(NAME ${TEST_NAME} COMMAND ${CLIENT_TEST})
-        set_tests_properties(${TEST_NAME} PROPERTIES TIMEOUT 10) 
+        # Command line --timeout does NOT override this value
+        #set_tests_properties(${TEST_NAME} PROPERTIES TIMEOUT 10) 
     endif()
 endforeach()
