Change packaging to multiple components for .rpm and .deb

--- a/doc/manpage/CMakeLists.txt
+++ b/doc/manpage/CMakeLists.txt
@@ -17,7 +17,12 @@
 # along with the srcML Toolkit; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
 
-install(FILES ${CMAKE_BINARY_DIR}/srcml.1 DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
+add_custom_command(OUTPUT ${CMAKE_BINARY_DIR}/srcml.1.gz
+    COMMAND gzip -n -9 -f ${CMAKE_BINARY_DIR}/srcml.1
+    DEPENDS ${CMAKE_BINARY_DIR}/srcml.1
+)
+
+install(FILES ${CMAKE_BINARY_DIR}/srcml.1.gz DESTINATION ${CMAKE_INSTALL_MANDIR}/man1 COMPONENT CLIENT)
 
 set(REMOTE_MANPAGE_NAME srcml-${PROJECT_VERSION}.troff)
 
@@ -25,13 +30,13 @@ set(REMOTE_MANPAGE_NAME srcml-${PROJECT_VERSION}.troff)
 if(NOT BUILD_CLIENT_DOC)
     set(MANPAGE_URL http://gehry.sdml.cs.kent.edu/build/${REMOTE_MANPAGE_NAME})
     message(STATUS "Downloading manpage from ${MANPAGE_URL}")
-    file(DOWNLOAD ${MANPAGE_URL} ${CMAKE_BINARY_DIR}/srcml.1)
+    file(DOWNLOAD ${MANPAGE_URL} ${CMAKE_BINARY_DIR}/srcml.1.gz)
     return()
 endif()
 
 # Upload the generated manpage for download by other installs
 # Requires permission by default user
-add_custom_target(publish_manpage COMMAND rsync --inplace ${CMAKE_BINARY_DIR}/srcml.1 gehry.sdml.cs.kent.edu:/var/www/html/sdml/build/${REMOTE_MANPAGE_NAME})
+add_custom_target(publish_manpage COMMAND rsync --inplace ${CMAKE_BINARY_DIR}/srcml.1.gz gehry.sdml.cs.kent.edu:/var/www/html/sdml/build/${REMOTE_MANPAGE_NAME})
 
 find_program(RONN_EXE REQUIRED NAMES ronn ronn.exe PATHS /bin /usr/bin ~/gems/bin/ronn ${WINDOWS_DEP_PATH}/bin)
 
@@ -129,9 +134,8 @@ set(PRETTY_FLAG_LONG "pretty")
 
 # Custom commands for creating things using the ronn executable
 configure_file(${CMAKE_SOURCE_DIR}/doc/manpage/srcml.cfg ${CMAKE_BINARY_DIR}/srcml.md)
-add_custom_command(OUTPUT ${CMAKE_BINARY_DIR}/srcml.1.gz
+add_custom_command(OUTPUT ${CMAKE_BINARY_DIR}/srcml.1
     COMMAND ${RONN_EXE} ${CMAKE_BINARY_DIR}/srcml.1.md --manual=srcml
-    COMMAND gzip ${CMAKE_BINARY_DIR}/srcml.1
     DEPENDS ${CMAKE_BINARY_DIR}/srcml.1.md
 )
 
@@ -142,3 +146,4 @@ add_custom_command(OUTPUT ${CMAKE_BINARY_DIR}/srcml.html
 )
 
 add_custom_target(doc_manpage ALL DEPENDS ${CMAKE_BINARY_DIR}/srcml.1.gz ${CMAKE_BINARY_DIR}/srcml.html)
+#add_custom_target(doc_manpage ALL DEPENDS ${CMAKE_BINARY_DIR}/srcml.1.gz ${CMAKE_BINARY_DIR}/srcml.html)
