--- a/doc/manpage/srcml.cfg
+++ b/doc/manpage/srcml.cfg
@@ -1,4 +1,6 @@
-srcML format conversion, query, and manipulation
+## NAME
+
+**srcml** - Conversion of source code to/from the srcML format, querying and manipulation of srcML
 
 
 ## SYNOPSIS
