--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,6 +25,8 @@ set(CMAKE_CXX_STANDARD 11)
 
 set(CMAKE_GENERATED_SOURCE_DIR ${CMAKE_BINARY_DIR}/parser)
 
+message(STATUS "CMake install prefix: ${CMAKE_INSTALL_PREFIX}")
+
 if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
 
     message("MSVC BUILD")
