--- a/src/libsrcml/CMakeLists.txt
+++ b/src/libsrcml/CMakeLists.txt
@@ -17,6 +17,10 @@
 # along with the srcML Toolkit; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
 
+# strip executables
+# Note: Does not seem to have an effect, so post-build strip is added
+set(CPACK_STRIP_FILES ON)
+
 if(DYNAMIC_LOAD_ENABLED)
     set(LIBSRCML_LIBRARIES ${LIBXML2_LIBRARIES} ${ANTLR_LIBRARY} ${Iconv_LIBRARIES} dl pthread
                 CACHE INTERNAL "Libraries needed to build libsrcml")
@@ -51,16 +55,7 @@ if(CMAKE_BUILD_TYPE STREQUAL "Debug" AND CMAKE_COMPILER_IS_GNUCXX)
     target_link_libraries(libsrcml_shared PRIVATE gcov)
 endif()
 
-# Set libsrcml version
-file(STRINGS "${CMAKE_SOURCE_DIR}/src/libsrcml/srcml.h" SRCML_HEADER)
-string(REGEX MATCH "SRCML_VERSION_STRING \"([0-9].[0-9].[0-9])\"" _ "${SRCML_HEADER}")
-set(SRCML_VERSION ${CMAKE_MATCH_1})
-
-set_target_properties(libsrcml_shared PROPERTIES VERSION "${SRCML_VERSION}" SOVERSION "${SRCML_VERSION}")
-
-if(NOT (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC") AND NOT WIN32)
-    install(CODE "execute_process(COMMAND \"/usr/bin/strip\"  \"-x\" \"$<TARGET_FILE:libsrcml_shared>\")")
-endif()
+set_target_properties(libsrcml_shared PROPERTIES VERSION "${PROJECT_VERSION}" SOVERSION "${PROJECT_VERSION_MAJOR}")
 
 if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
     set_target_properties(libsrcml_shared libsrcml_static PROPERTIES OUTPUT_NAME libsrcml LINK_FLAGS_DEBUG "/SAFESEH:NO")
@@ -71,9 +66,9 @@ else()
 endif()
 
 # which types of libraries
-install(TARGETS libsrcml_shared)
+install(TARGETS libsrcml_shared LIBRARY COMPONENT CLIENT NAMELINK_COMPONENT DEVELOPMENT)
 if (BUILD_LIBSRCML_STATIC)
-    install(TARGETS libsrcml_static)
+    install(TARGETS libsrcml_static COMPONENT DEVELOPMENT)
 endif()
 
 if(LINK_LIBSRCML_STATIC AND BUILD_LIBSRCML_STATIC)
@@ -83,7 +78,7 @@ else()
 endif()
 
 if(APPLE)
-    install(CODE "execute_process(COMMAND /usr/bin/install_name_tool -id /usr/local/lib/libsrcml.dylib /usr/local/lib/libsrcml.dylib)")
+    add_custom_command(TARGET libsrcml_shared POST_BUILD COMMAND /usr/bin/install_name_tool -id /usr/local/lib/libsrcml.dylib /usr/local/lib/libsrcml.dylib)
 endif()
 
 file(GLOB LIBSRCML_SOURCE *.h *.hpp *.cpp)
@@ -92,9 +87,22 @@ add_library(libsrcml OBJECT ${LIBSRCML_SOURCE})
 target_include_directories(libsrcml BEFORE PRIVATE . ${CMAKE_SOURCE_DIR}/src/parser ${CMAKE_GENERATED_SOURCE_DIR})
 add_dependencies(libsrcml parser)
 
-install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/srcml.h DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+# install the libsrcml include file
+install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/srcml.h DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} COMPONENT DEVELOPMENT)
 
 if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
     file(GLOB SRCML_DLLS ${WINDOWS_DEP_PATH}/release/bin/*.dll)
     install(FILES ${SRCML_DLLS} DESTINATION bin)
+endif()
+
+set_target_properties(libsrcml_shared PROPERTIES LINK_FLAGS_RELEASE -s)
+
+if(APPLE)
+    add_custom_command(TARGET libsrcml_static POST_BUILD
+        COMMAND /usr/bin/strip -ur ${CMAKE_BINARY_DIR}/bin/libsrcml.a
+        COMMAND ${CMAKE_COMMAND} -E echo "-- Stripping bin/libsrcml.a")
+elseif(NOT WIN32)
+    add_custom_command(TARGET libsrcml_static POST_BUILD
+        COMMAND /usr/bin/strip ${CMAKE_BINARY_DIR}/bin/libsrcml.a
+        COMMAND ${CMAKE_COMMAND} -E echo "-- Stripping bin/libsrcml.a")
 endif()
