--- a/examples/libsrcml/CMakeLists.txt
+++ b/examples/libsrcml/CMakeLists.txt
@@ -20,15 +20,21 @@
 # add cli tests
 file(GLOB EXAMPLES "srcml_*.c")
 
-set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -std=c99")
+install(FILES ${EXAMPLES} DESTINATION share/srcml/examples COMPONENT DEVELOPMENT)
 
-foreach(EXAMPLE ${EXAMPLES})
-    get_filename_component(EXAMPLE_NAME ${EXAMPLE} NAME_WE)
-    add_executable(${EXAMPLE_NAME} ${EXAMPLE})
-    target_include_directories(${EXAMPLE_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/src/libsrcml)
-    target_link_libraries(${EXAMPLE_NAME} libsrcml_link)
-    # @TODO Do we need these as a test?
-#    add_test(NAME ${TEST_NAME} COMMAND $<TARGET_FILE:${TEST_NAME}>)
-    # @TODO Should we copy the examples?
-    set_target_properties(${EXAMPLE_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-endforeach()
+if(BUILD_EXAMPLES)
+
+	set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -std=c99")
+
+	foreach(EXAMPLE ${EXAMPLES})
+	    get_filename_component(EXAMPLE_NAME ${EXAMPLE} NAME_WE)
+	    add_executable(${EXAMPLE_NAME} ${EXAMPLE})
+	    target_include_directories(${EXAMPLE_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/src/libsrcml)
+	    target_link_libraries(${EXAMPLE_NAME} libsrcml_link)
+	    # @TODO Do we need these as a test?
+	#    add_test(NAME ${TEST_NAME} COMMAND $<TARGET_FILE:${TEST_NAME}>)
+	    set_target_properties(${EXAMPLE_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+	endforeach()
+
+endif()
+
