--- a/package/CMakeLists.txt
+++ b/package/CMakeLists.txt
@@ -20,6 +20,10 @@
 # package name
 set(CPACK_PACKAGE_NAME "srcML") 
 
+# Package release number (NOT srcml or libsrcml release)
+# Note: Update when package is updated, but not contents
+set(SRCML_PACKAGE_RELEASE 1)
+
 # executables and text label
 set(CPACK_PACKAGE_EXECUTABLES srcml;srcML)
 
@@ -30,7 +34,6 @@ set(CPACK_CREATE_DESKTOP_LINKS srcml)
 if(CMAKE_SYSTEM_NAME MATCHES "Windows")
     set(CPACK_PACKAGE_FILE_NAME "srcML-Win")
 else()
-    set(CPACK_PACKAGE_FILE_NAME "srcML")
     if(CMAKE_SYSTEM_NAME MATCHES "Darwin")
         set(CPACK_GENERATOR "TGZ;TBZ2")
     elseif(DISTRO MATCHES "Ubuntu")
@@ -41,16 +44,11 @@ else()
 endif()
 message(STATUS "CPack generators: ${CPACK_GENERATOR}")
 
-# Use the same directories as install
-if(NOT CPACK_PACKAGING_INSTALL_PREFIX)
-    set(CPACK_PACKAGING_INSTALL_PREFIX "${CMAKE_INSTALL_PREFIX}")
-endif()
-
 # summary
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "srcML Toolkit")
 
 # description
-#set(CPACK_PACKAGE_DESCRIPTION_FILE ${CMAKE_SOURCE_DIR}/doc/src2srcml.xml)
+set(CPACK_PACKAGE_DESCRIPTION_FILE ${CMAKE_SOURCE_DIR}/package/welcome.txt)
 
 # vendor
 set(CPACK_PACKAGE_VENDOR "srcML, LLC.")
@@ -84,10 +82,17 @@ endif()
 # output directory
 set(CPACK_PACKAGE_DIRECTORY ${CMAKE_BINARY_DIR}/dist)
 
+# Generate user and development tar.gz's
+set(CPACK_ARCHIVE_COMPONENT_INSTALL ON)
+
 # specific configurations
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/package)
-include(debian)
-include(rpm)
+if (CPACK_GENERATOR MATCHES "RPM")
+    include(rpm)
+endif()
+if (CPACK_GENERATOR MATCHES "DEB")
+    include(debian)
+endif()
 include(nsis)
 
 # needs to be last so not overwritten
