--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@
 #
 cmake_minimum_required(VERSION 3.14)
 
-project(srcML VERSION 1.0.0)
+project(srcML VERSION 1.0.0 HOMEPAGE_URL "https://srcMl.org")
 
 # Turn ON/OFF tests
 option(BUILD_CLIENT_TESTS "Build srcml client tests" ON)
@@ -43,6 +43,9 @@ option(BUILD_EXAMPLES "Build examples usage files for libsrcml" OFF)
 option(BUILD_CLIENT_DOC "Build client documentation" OFF)
 option(INSTALL_CLIENT_DOC "Install (but do not build) client documentation" OFF)
 option(BUILD_LIBSRCML_DOC "Build libsrcml documentation" OFF)
+if(NOT BUILD_CLIENT_DOC)
+    set(INSTALL_CLIENT_DOC ON)
+endif()
 
 # Turn ON building all documentation
 option(BUILD_ALL_DOCS "Build all documentation" OFF)
@@ -93,12 +96,8 @@ include(GNUInstallDirs)
 
 add_subdirectory(src)
 add_subdirectory(test)
-
-if(BUILD_EXAMPLES)
-    add_subdirectory(examples)
-endif()
-
 add_subdirectory(doc)
+add_subdirectory(examples)
 
 # packaging
 add_subdirectory(package)
