Rename cmake component internal names to SRCML and SRCMLDEV

--- a/doc/manpage/CMakeLists.txt
+++ b/doc/manpage/CMakeLists.txt
@@ -22,7 +22,7 @@ add_custom_command(OUTPUT ${CMAKE_BINARY_DIR}/srcml.1.gz
     DEPENDS ${CMAKE_BINARY_DIR}/srcml.1
 )
 
-install(FILES ${CMAKE_BINARY_DIR}/srcml.1.gz DESTINATION ${CMAKE_INSTALL_MANDIR}/man1 COMPONENT CLIENT)
+install(FILES ${CMAKE_BINARY_DIR}/srcml.1.gz DESTINATION ${CMAKE_INSTALL_MANDIR}/man1 COMPONENT SRCML)
 
 set(REMOTE_MANPAGE_NAME srcml-${PROJECT_VERSION}.troff)
 
