--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,15 +23,12 @@ cmake_minimum_required(VERSION 3.14)
 
 # Set libsrcml version from src/libsrcml/srcml.h
 # Extract this first because manually setting major, minor, and patch leads to bugs
-file(STRINGS "${CMAKE_SOURCE_DIR}/src/libsrcml/srcml.h" SRCML_HEADER)
-string(REGEX MATCH "SRCML_VERSION_STRING \"([0-9.]+)\"" _ "${SRCML_HEADER}")
+file(STRINGS "${CMAKE_SOURCE_DIR}/src/libsrcml/srcml.h" SRCML_HEADER REGEX "SRCML_VERSION_STRING")
+string(REGEX MATCH "\"([0-9.]+)\"" _ "${SRCML_HEADER}")
 
 project(srcML VERSION "${CMAKE_MATCH_1}" HOMEPAGE_URL "https://www.srcML.org")
 
 message(STATUS "Project version: ${PROJECT_VERSION}")
-message(STATUS "Project major version: ${PROJECT_VERSION_MAJOR}")
-message(STATUS "Project minor version: ${PROJECT_VERSION_MINOR}")
-message(STATUS "Project patch version: ${PROJECT_VERSION_PATCH}")
 
 # Turn ON/OFF tests
 option(BUILD_CLIENT_TESTS "Build srcml client tests" ON)
