--- a/package/CPack.distribution.dist.in
+++ b/package/CPack.distribution.dist.in
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<installer-gui-script minSpecVersion="1.0">
+<installer-gui-script minSpecVersion="2.0">
     <title>@CPACK_PACKAGE_NAME@</title>
     <welcome file="@CPACK_RESOURCE_FILE_WELCOME_NOPATH@"/>
     <license file="@CPACK_RESOURCE_FILE_LICENSE_NOPATH@"/>
     <background file="BACKGROUND.png"/>
-    <options allow-external-scripts="no" customize="allow" rootVolumeOnly="false"></options>
+    <conclusion file="Installed.html" mime-type="text/html"/>
+    <options allow-external-scripts="no" customize="always" rootVolumeOnly="false"></options>
     @CPACK_PACKAGEMAKER_CHOICES@
 </installer-gui-script>
