Combine some of the components into groups for cpack

--- a/package/CMakeLists.txt
+++ b/package/CMakeLists.txt
@@ -17,6 +17,40 @@
 # along with the srcML Toolkit; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
 
+# Client component, SRCML, is just one component so it appears as on item
+# for installers that let you pick what to install
+# Development group, SRCMLDEV, is composed of multiple components
+include(CPackComponent)
+cpack_add_component(SRCML
+                    DISPLAY_NAME "srcml"
+                    DESCRIPTION "srcml cli program with required library"
+                    REQUIRED)
+
+cpack_add_component_group(SRCMLDEV
+                    DISPLAY_NAME "Development"
+                    DESCRIPTION "Include file, static library, and examples for developing C++ programs with libsrcml")
+
+cpack_add_component(INCLUDE
+                    DISPLAY_NAME "srcml.h"
+                    DESCRIPTION "Include file, srcml.h"
+                    DISABLED
+                    GROUP SRCMLDEV)
+
+cpack_add_component(DEVLIBS
+                    DISPLAY_NAME "libsrcml.a"
+                    DESCRIPTION "Development libraries, i.e.., static library"
+                    DISABLED
+                    GROUP SRCMLDEV)
+
+cpack_add_component(EXAMPLES
+                    DISPLAY_NAME "libsrcml examples"
+                    DESCRIPTION "Include file, srcml.h"
+                    DISABLED
+                    GROUP SRCMLDEV)
+
+# especially for archives
+set(CPACK_COMPONENTS_GROUPING "ONE_PER_GROUP")
+
 # Package name
 set(CPACK_PACKAGE_NAME "srcml") 
 
@@ -94,7 +128,7 @@ elseif (APPLE)
 endif()
 
 # Perform any platform-specific fixes or updating of the installer
-# THis noop version basically just runs the normal packaging, e.g., cmake
+# THis noop version basically just runs the normal packaging, e.g., cpack
 if(NOT TARGET gen_package)
     add_custom_target(gen_package
        COMMAND ${CMAKE_COMMAND} --build . --target package
