--- a/examples/libsrcml/CMakeLists.txt
+++ b/examples/libsrcml/CMakeLists.txt
@@ -20,7 +20,7 @@
 # add cli tests
 file(GLOB EXAMPLES "srcml_*.c")
 
-install(FILES ${EXAMPLES} DESTINATION share/srcml/examples COMPONENT SRCMLDEV)
+install(FILES ${EXAMPLES} DESTINATION share/srcml/examples COMPONENT EXAMPLES)
 
 if(BUILD_EXAMPLES)
 
